cabal-version:      3.0
name:               ppad-hkdf
version:            0.3.0
synopsis:           A HMAC-based key derivation function
license:            MIT
license-file:       LICENSE
author:             Jared Tobin
maintainer:         jared@ppad.tech
category:           Cryptography
build-type:         Simple
tested-with:        GHC == { 9.8.1 }
extra-doc-files:    CHANGELOG
description:
  A pure implementation of the HMAC-based extract-and-expand key derivation
  function, per RFC5869.

source-repository head
  type:     git
  location: git.ppad.tech/hkdf.git

library
  default-language: Haskell2010
  hs-source-dirs:   lib
  ghc-options:
      -Wall
  exposed-modules:
      Crypto.KDF.HMAC
  build-depends:
      base >= 4.9 && < 5
    , bytestring >= 0.9 && < 0.13

test-suite hkdf-tests
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      test
  main-is:             Main.hs
  other-modules:
    Wycheproof

  ghc-options:
    -rtsopts -Wall -O2

  build-depends:
      aeson
    , base
    , bytestring
    , ppad-base16
    , ppad-hkdf
    , ppad-sha256
    , ppad-sha512
    , tasty
    , tasty-hunit
    , text

benchmark hkdf-bench
  type:                exitcode-stdio-1.0
  default-language:    Haskell2010
  hs-source-dirs:      bench
  main-is:             Main.hs

  ghc-options:
    -rtsopts -O2 -Wall

  build-depends:
      base
    , bytestring
    , criterion
    , ppad-hkdf
    , ppad-sha256
    , ppad-sha512

